# defmt-tcp

./: Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs
