[package]
name = "defmt-tcp"
version = "0.1.0"
edition = "2018"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>", "Mia Metzler <mia@metzler.systems>"]
repository = "https://github.com/miathedev/defmt-tcp"
readme = "README.md"
description = "Prints defmt logs received from a TCP interface"
keywords = ["cli", "embedded", "defmt"]
categories = ["command-line-utilities", "development-tools", "embedded"]
license-file = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
thiserror = "1.0"
ctrlc = "3.1.7"
log = "0.4.14"
serialport = "4.0"
anyhow = "1.0.43"


[dependencies.defmt-decoder]
version = "=0.3.0"
features = ["unstable"]