[package]
name = "defmt-tcp"
version = "0.1.2"
edition = "2021"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>", "Mia Metzler <mia@metzler.systems>"]
repository = "https://github.com/miathedev/defmt-tcp"
readme = "README.md"
description = "Prints defmt logs received from a TCP interface"
keywords = ["cli", "embedded", "defmt"]
categories = ["command-line-utilities", "development-tools", "embedded"]
license-file = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
rust-version = "1.76.0"
[dependencies]
structopt = "0.3.26"
thiserror = "1.0.51"
log = "0.4.20"
anyhow = "1.0.76"


[dependencies.defmt-decoder]
version = "0.3.9"
features = ["unstable"]